SVN
-------------------------------

XML:   Resolved issue CASTOR-1943 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added Unmarshaller.setObject(Object) to allow setting of a root object for unmarshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1943
       (Werner - 20070412)

XML:   Resolved issue CASTOR-1939 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed regression issue with automatic conflict resolution and global element conflicts.
       Details: http://jira.codehaus.org/browse/CASTOR-1939
       (Werner - 20070409)

XML:   Resolved issue CASTOR-1935 using contribution from Chris Keller [chris.keller@active-endpoints.com]
       Fixed problem with importing from same namespace multiple times where one import actually includes 
       the other.
       Details: http://jira.codehaus.org/browse/CASTOR-1935
       (Werner - 20070406)

XML:   Resolved issue CASTOR-1938 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed NPE for extended types with <xs:any> members
       Details: http://jira.codehaus.org/browse/CASTOR-1938
       (Werner - 20070406)

XML:   Resolved issue CASTOR-1936 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Made XPathLocation implement java.io.Serializable.
       Details: http://jira.codehaus.org/browse/CASTOR-1936
       (Werner - 20070404)

XML:   Resolved issue CASTOR-1931 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with enum bindings for interger-based enumerations.
       Details: http://jira.codehaus.org/browse/CASTOR-1931
       (Werner - 20070403)

XML:   Resolved issue CASTOR-1928 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with not-specified binding file during automatic naming collision resolution.
       Details: http://jira.codehaus.org/browse/CASTOR-1928
       (Werner - 20070401)
