@@ -101,6 +101,28 @@ org.exolab.castor.builder.automaticConflictResolution=true</code-panel>
                    
             </summary>
             <bugs>
+                <bug id="1937" tool="jira">
+                    <description>
+                    	Relaxed various checks in the default ID resolver implementation so 
+                    	that those checks are executed only when the Unmarshaller is configured 
+                    	to be 'validating'.
+                    </description>
+                    <contributor>
+                        <name>Paul Croarkin</name>
+                        <email>paul_croarkin@yahoo.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Paul Croarkin</name>
+                        <email>paul_croarkin@yahoo.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20070416</date>
+                </bug>
                 <bug id="1943" tool="jira">
                     <description>
                         Added Unmarshaller.setObject(Object) to allow setting of a root object 
